# bambu-local-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  side-v2a.stl
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md  sentinel.md
bambu_cli/: AGENTS.md  README.md  __init__.py  bambu.py  camera.py  cli.py  commands.py  config.py  constants.py  context.py  download.py  job.py  logging_utils.py  netsafety.py  printer.py  requirements.txt  setup_cmd.py  slicer.py  utils.py
bambu_cli/commands/: doctor.py
bambu_cli/download/: __init__.py  downloader.py  extract.py  html_links.py  naming.py  (+1 more)
docs/: README.md  api.md  demo.tape  manual.md  quality-roadmap.md  test-backlog.md
scripts/: bambu.py  clean_artifacts.py
tests/: agent_cli_smoke.py  bambu_test_base.py  ci_workflow_smoke.py  conftest.py  dependency_resolution_smoke.py  live_printer_smoke.py  package_contents_smoke.py  privacy_smoke.py  python_compat_smoke.py  release_readiness_smoke.py  test_access_code_deprecation.py  test_agent_cli_smoke.py  test_bambu.py  test_bambu_cli_regressions.py  test_camera.py  test_camera_cmd.py  test_cli.py  test_cli_entry.py  test_config_and_logging.py  test_context.py  test_coverage_platform_paths.py  test_doctor_and_safety.py  test_download_cmd.py  test_download_hardening_p0.py  test_errors.py  test_html_link_scraping.py  test_job.py  test_json_contracts.py  test_netsafety.py  test_printer_commands.py  test_protocol_clients.py  test_slice_cmd.py  test_slicer_pure.py
(+16 files in other folders)
