[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bambu-cli"
version = "0.1.0"
description = "Local Bambu Lab printer control for agents and humans"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "bambu-cli contributors" }]
keywords = ["bambu", "3d-printing", "agent", "cli", "orcaslicer"]
dependencies = [
    "rich>=13.0.0",
  "paho-mqtt>=2.0,<3.0",
  "zeroconf>=0.131,<1.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Hardware",
 ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[project.scripts]
bambu-cli = "bambu_cli.bambu:main"

[tool.setuptools]
packages = ["bambu_cli", "bambu_cli.protocols"]

[tool.setuptools.package-data]
"bambu_cli" = ["README.md", "AGENTS.md", "requirements.txt"]
